2002-03-16  Dan Espen  <dane@mk.telcordia.com>

	* AUTHORS: New author added.

2002-03-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c:
	* fvwm/borders.c:
	* fvwm/add_window.c (setup_frame_stacking):
	* fvwm/cursor.c (CMD_CursorStyle):
	* fvwm/events.c (HandleExpose):
	(HandleMapNotify):
	(HandleEnterNotify):
	(HandleLeaveNotify):
	(GetContext):
	* fvwm/geometry.c (get_title_button_geometry):
	* fvwm/virtual.c (map_window):
	* fvwm/add_window.c (setup_parent_window):
	(setup_resize_handle_cursors):
	(setup_resize_handle_windows):
	(resize_resize_handle_windows):
	(change_resize_handle_windows):
	some progress with new frame layout

	* fvwm/add_window.c (setup_visible_name):
	fixed off-by-one bug in setup_visible_name
	maximum window number can be set in defaults.h

2002-03-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/windowlist.h:
	* fvwm/virtual.h:
	* fvwm/update.h:
	* fvwm/style.h:
	* fvwm/read.h:
	* fvwm/placement.h:
	* fvwm/menus.h:
	* fvwm/move_resize.h:
	* fvwm/icons.h:
	* fvwm/geometry.h:
	* fvwm/frame.h:
	* fvwm/focus.h:
	* fvwm/events.h:
	* fvwm/borders.h:
	* fvwm/add_window.h:
	* fvwm/ewmh_names.c:
	* fvwm/ewmh_icons.c:
	* fvwm/ewmh_events.c:
	* fvwm/ewmh.c:
	* fvwm/frame.c:
	* fvwm/menucmd.c:
	* fvwm/schedule.c:
	* fvwm/geometry.c:
	* fvwm/gnome.c:
	* fvwm/windowlist.c:
	* fvwm/cursor.c:
	* fvwm/update.c:
	* fvwm/bindings.c:
	* fvwm/colormaps.c:
	* fvwm/decorations.c:
	* fvwm/conditional.c:
	* fvwm/misc.c:
	* fvwm/read.c:
	* fvwm/placement.c:
	* fvwm/fvwm.c:
	* fvwm/virtual.c:
	* fvwm/session.c:
	* fvwm/functions.c:
	* fvwm/stack.c:
	* fvwm/icons.c:
	* fvwm/module_interface.c:
	* fvwm/style.c:
	* fvwm/add_window.c:
	* fvwm/events.c:
	* fvwm/builtins.c:
	* fvwm/move_resize.c:
	* fvwm/borders.c:
	* fvwm/menus.c:
	* fvwm/fvwm.h (FvwmWindow):
	moved all windows into a separate sub structure and wrot access macros
	renamed FvwmWindow argument to builtin commands to "fw"
	renamed tmp_win to fw everywhere

	* fvwm/borders.c (RedrawBorder):