@@ -3155,7 +3155,7 @@ command.
 .in -.3i
 .in -.5i
 
-The defaults are shown in parentheses above.  Is you ever want to
+The defaults are shown in parentheses above.  If you ever want to
 restore the default cursor for a specific context you can omit the
 second argument.
 
@@ -4669,7 +4669,7 @@ default value "L".
 This command creates a lot of extra network traffic, depending on
 your CPU, network connection, the number of
 .BR Key " or " Mouse
-commands in you configuration file and the number of modifiers you
+commands in your configuration file and the number of modifiers you
 want to ignore.  If you do not have a lightning fast machine or
 very few bindings you should not ignore more than two modifiers.
 I.e. do not ignore
