@@ -1,3 +1,11 @@
+2002-03-16  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/fvwm2.1:
+	corrected some typos
+	* fvwm/frame.c:
+	* fvwm/borders.c:
+	handle marks work again
+
 2002-03-16  Dan Espen  <dane@mk.telcordia.com>
 
 	* AUTHORS: New author added.
